objects/ssot__RgltyCodeViolRegClVer__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Regulatory Code Viol Reg Clause Ver Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RegulationClauseVersion__c</fullName>
        <label>Regulation Clause Version</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RegulatoryCodeViolation__c</fullName>
        <label>Regulatory Code Violation</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1731040566000_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RgltyCodeViolRegClVer_RegulatoryCode_rel</label>
        <referenceTo>ssot__RegulatoryCodeViolation__dlm</referenceTo>
        <relationshipLabel>RgltyCodeViolRegClVer_RegulatoryCode_rel</relationshipLabel>
        <relationshipName>rel_1731040566000_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>